--- a/css/cssReset.css
+++ b/css/cssReset.css
@@ -1,3 +1,7 @@
+@import url(http://fonts.googleapis.com/css?family=Alegreya+Sans+SC:900);
+@import url(https://fonts.googleapis.com/css?family=Alegreya:700);
+@import url(https://fonts.googleapis.com/css?family=Ek+Mukta);
+
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -15,40 +19,40 @@ table, caption, tbody, tfoot, thead, tr, th, td {
     vertical-align: baseline;
     background: transparent;
 }
- 
+
 body {
     line-height: 1;
 }
- 
+
 ol, ul {
     list-style: none;
 }
 
- 
+
 blockquote, q {
     quotes: none;
 }
- 
+
 blockquote:before, blockquote:after,
 q:before, q:after {
     content: '';
     content: none;
 }
- 
+
 /* remember to define focus styles! */
 :focus {
     outline: 0;
 }
- 
+
 /* remember to highlight inserts somehow! */
 ins {
     text-decoration: none;
 }
- 
+
 del {
     text-decoration: line-through;
 }
- 
+
 /* tables still need 'cellspacing="0"' in the markup */
 table {
     border-collapse: collapse;
